2007-07-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.NodeBuilders/ProjectFolderNodeBuilderExtension.cs:
	  Don't try to use the CurrentNode property after adding the file,
	  since it may have changed. Should fix bug #82123.
	* lib/libsteticui.dll, lib/libstetic.dll: Updated from Stetic module.
	  Fixes bugs #81846 and #82144.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Fix window
	  source file lookup.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs: Use the new methods
	  for checking clipboard operations on the current selection.
	* MonoDevelop.GtkCore.GuiBuilder/ToolboxProvider.cs: Include the
	  current project in the list of libraries to show in the toolbox.
	  Fixes bug #82125.

2007-07-10  Lluis Sanchez Gual <lluis@novell.com> 

	* lib/libsteticui.dll, lib/libstetic.dll: Updated. Fixes bugs 81977,
	  81810 and 82052.

2007-07-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs,
	  MonoDevelop.GtkCore.GuiBuilder/ActionGroupView.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs: Properly rename
	  fields when the widget name is changed. Fixes bug #81976.

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProjectPad.cs: Update the
	  properties pad when the focus is on the widget tree pad. Fixes bug
	  #81971.

2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* lib/libsteticui.dll, lib/libstetic.dll: Updated from Stetic module.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Added null
	  check.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs: Track api changes
	  in DesignerSupport. When adding a project reference to a widget
	  library, take into account that widgets may be implemented in a
	  library different from the one providing the widget list.